src/test/resources/shexTest/negativeStructure/includeSimpleShape.shex
<http://a.example/S> {
  &<http://a.example/S1>;
  <http://a.example/p1> .
}

<http://a.example/S1> {
  <http://a.example/p2> .
}

